--- a/MarvalSoftware.Plugins.Statuspage.html
+++ b/MarvalSoftware.Plugins.Statuspage.html
@@ -279,7 +279,7 @@
                             getLatestPluginVersion();
                         });
                     }
-                    else {
+                    else if(!currentUrl.includes("Plugin.aspx")){
                         
                         this._setUpQuickMenu();
                         
